# zona-prop-scraper

./: .gitignore  README.md  pyproject.toml
scraper/: main.py  pyproject.toml
scraper/src/: browser.py  json_scraper.py  utils.py
web-app/: index.html  package-lock.json  package.json
web-app/src/: App.css  App.tsx  index.css
